--- a/quote-calculator/pressure-washing.html
+++ b/quote-calculator/pressure-washing.html
@@ -9,13 +9,15 @@
 <style>
 body {font-family: Arial, sans-serif; margin:0; padding:0; background:#f9f9f9;}
 main {max-width:700px; margin:30px auto; padding:20px; background:#fff; border-radius:8px; box-shadow:0 0 15px rgba(0,0,0,0.1);}
-h1 {text-align:center; color:#000; margin-bottom:20px;} /* Title now black */
-p {text-align:center; margin-bottom:25px;}
+h1 {text-align:center; color:#000; margin-bottom:20px;}
+p {text-align:center; color:#000; margin-bottom:25px;}
 button {padding:12px 20px; background:#000; color:#fff; border:none; border-radius:6px; font-size:16px; cursor:pointer; margin:10px 5px;}
 button:hover {background:#333;}
 label {display:block; margin-top:10px;}
 input[type=number], select {width:100%; padding:8px; margin-top:5px; border-radius:4px; border:1px solid #ccc;}
-.surface-form {border:1px solid #ddd; padding:15px; border-radius:6px; background:#f2f2f2; margin-bottom:15px;}
+.surface-form {border:1px solid #ddd; border-radius:6px; background:#f2f2f2; margin-bottom:15px;}
+.surface-header {padding:10px; font-weight:bold; cursor:pointer; background:#e1e1e1; border-bottom:1px solid #ddd; border-radius:6px 6px 0 0;}
+.surface-body {padding:15px; display:none;}
 .summary {background:#e7f9f2; padding:15px; border-radius:6px; margin-top:20px;}
 </style>
 </head>
@@ -24,13 +26,33 @@ input[type=number], select {width:100%; padding:8px; margin-top:5px; border-radi
 <h1>Instant Pressure Washing Quote Calculator</h1>
 
 <p>
-Use this calculator to get an instant estimate for pressure washing your property. You can add <strong>as many or as few surfaces</strong> as you like — from driveways, patios, and decking to walls or fences — and customise each surface with dimensions, condition, accessibility, and optional extras. It's quick, simple, and gives you a realistic idea of costs before booking.
+Use this calculator to get an instant estimate for pressure washing your property. You can add <strong>as many or as few surfaces</strong> as you like — from driveways, patios, decking to walls or fences — and customise each surface with dimensions, condition, accessibility, and optional extras.
 </p>
 
-<div id="surface-form-container" style="display:none;">
-<div class="surface-form" id="surface-form">
+<div id="surfaces-container"></div>
+
+<div style="text-align:center;">
+<button onclick="addSurface()">➕ Add Surface</button>
+<button onclick="calculateQuote()">Get Quote</button>
+</div>
+
+<div id="quote-summary" class="summary" style="display:none;"></div>
+
+<script>
+let surfaceCount = 0;
+
+function addSurface() {
+surfaceCount++;
+const container = document.getElementById('surfaces-container');
+
+const div = document.createElement('div');
+div.className = 'surface-form';
+div.id = `surface-${surfaceCount}`;
+div.innerHTML = `
+<div class="surface-header" onclick="toggleSurface('${div.id}')">Surface ${surfaceCount} (click to expand/collapse)</div>
+<div class="surface-body">
 <label>Surface Type:
-<select id="surface-type">
+<select class="surface-type">
 <option value="driveway">Driveway</option>
 <option value="patio">Patio</option>
 <option value="decking">Decking</option>
@@ -38,91 +60,102 @@ Use this calculator to get an instant estimate for pressure washing your propert
 <option value="fence">Fence/Gate</option>
 </select>
 </label>
-<label id="length-label">Length (m):
-<input type="number" id="length" min="0" step="0.1" required>
+<label>Length (m):
+<input type="number" class="length" min="0" step="0.1" required>
 </label>
-<label id="width-label">Width (m):
-<input type="number" id="width" min="0" step="0.1" required>
+<label>Width (m):
+<input type="number" class="width" min="0" step="0.1" required>
 </label>
 <label>Condition:
-<select id="condition">
+<select class="condition">
 <option value="light">Light</option>
 <option value="moderate">Moderate</option>
 <option value="heavy">Heavy</option>
 </select>
 </label>
 <label>Accessibility:
-<select id="accessibility">
+<select class="accessibility">
 <option value="easy">Easy</option>
 <option value="limited">Limited</option>
 </select>
 </label>
 <label>Optional Extras:
-<select id="extras">
+<select class="extras">
 <option value="none">None</option>
 <option value="sealant">Protective Sealant</option>
 <option value="stain">Stain Treatment</option>
 </select>
 </label>
+<button type="button" onclick="removeSurface('${div.id}')">🗑 Remove Surface</button>
 </div>
-</div>
+`;
+container.appendChild(div);
+}
 
-<div style="text-align:center;">
-<button onclick="showForm()">➕ Add Surface</button>
-<button onclick="calculateQuote()">Get Quote</button>
-</div>
+function toggleSurface(id) {
+const div = document.getElementById(id);
+const body = div.querySelector('.surface-body');
+body.style.display = body.style.display === 'block' ? 'none' : 'block';
+}
 
-<div id="quote-summary" class="summary" style="display:none;"></div>
-
-<script>
-function showForm() {
-document.getElementById('surface-form-container').style.display = 'block';
+function removeSurface(id) {
+const el = document.getElementById(id);
+if(el) el.remove();
 }
 
 function calculateQuote() {
-const type = document.getElementById('surface-type').value;
-const length = parseFloat(document.getElementById('length').value) || 0;
-const width = parseFloat(document.getElementById('width').value) || 0;
-const condition = document.getElementById('condition').value;
-const accessibility = document.getElementById('accessibility').value;
-const extras = document.getElementById('extras').value;
+const containers = document.querySelectorAll('.surface-form');
+if(containers.length === 0) {
+alert("Please add at least one surface to calculate a quote.");
+return;
+}
 
-// Base rates (£/m²)
+let totalCost = 0;
+let summaryHtml = '';
+
+containers.forEach((container, index) => {
+const type = container.querySelector('.surface-type').value;
+const length = parseFloat(container.querySelector('.length').value) || 0;
+const width = parseFloat(container.querySelector('.width').value) || 0;
+const condition = container.querySelector('.condition').value;
+const accessibility = container.querySelector('.accessibility').value;
+const extras = container.querySelector('.extras').value;
+
 let baseRate = 0;
 if(type==="driveway") baseRate=3;
 else if(type==="patio") baseRate=2.5;
 else if(type==="decking") baseRate=4;
 else if(type==="wall") baseRate=2.5;
-else if(type==="fence") baseRate=20; // per metre
+else if(type==="fence") baseRate=20;
 
-// Calculate area (for fences, area is length only)
 let area = length * width;
 if(type==="fence") area = length;
 
-// Condition multiplier
 let conditionMultiplier = 1;
 if(condition==="moderate") conditionMultiplier = 1.25;
 else if(condition==="heavy") conditionMultiplier = 1.5;
 
-// Accessibility extra
 let accessExtra = 0;
 if(accessibility==="limited") accessExtra = 40;
 
-// Extras
 let extrasCost = 0;
 if(extras==="sealant") extrasCost = area * 1.5;
 else if(extras==="stain") extrasCost = area * 2;
 
-// Total
-const total = area * baseRate * conditionMultiplier + accessExtra + extrasCost;
+const cost = area * baseRate * conditionMultiplier + accessExtra + extrasCost;
+totalCost += cost;
 
-// Friendly summary
+summaryHtml += `<p><strong>Surface ${index+1}:</strong> ${type} (${length}m × ${width}m), ${condition} condition, ${accessibility} accessibility, extras: ${extras} → £${cost.toFixed(2)}</p>`;
+});
+
+summaryHtml += `<p><strong>Total Estimated Cost: £${totalCost.toFixed(2)}</strong></p>`;
+summaryHtml += `<p>Your selected surfaces will be cleaner, safer, and look like new!</p>`;
+
 const summaryDiv = document.getElementById("quote-summary");
-summaryDiv.innerHTML = `<p>Thanks for using our calculator! Based on your selection of a <strong>${type}</strong> (${length}m × ${width}m), with <strong>${condition}</strong> condition, <strong>${accessibility}</strong> accessibility, and <strong>${extras}</strong> extras, your estimated cost is <strong>£${total.toFixed(2)}</strong>. Your surfaces will be cleaner, safer, and look like new!</p>`;
+summaryDiv.innerHTML = summaryHtml;
 summaryDiv.style.display = "block";
 }
 </script>
-
 </main>
 </body>
 </html>
