--- a/quote-calculator/pressure-washing.html
+++ b/quote-calculator/pressure-washing.html
@@ -1,161 +1,222 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="robots" content="index, follow">
 <title>Instant Pressure Washing Quote Calculator</title>
-<meta name="description" content="Get an instant online pressure washing quote for driveways, patios, decking, walls, fences, and more. Friendly, easy-to-use calculator.">
-<link rel="canonical" href="https://homerepairs4u.com/quote-calculators/pressure-washing">
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/quote-calculator/pressure-washing">
+<meta name="description" content="Get an instant online quote for pressure washing driveways, patios, decking, walls, and fences. Add multiple surfaces and see your price immediately.">
+
 <style>
-body {font-family: Arial, sans-serif; margin:0; padding:0; background:#f9f9f9;}
-main {max-width:700px; margin:30px auto; padding:20px; background:#fff; border-radius:8px; box-shadow:0 0 15px rgba(0,0,0,0.1);}
-h1 {text-align:center; color:#000; margin-bottom:20px;}
-p {text-align:center; color:#000; margin-bottom:25px;}
-button {padding:12px 20px; background:#000; color:#fff; border:none; border-radius:6px; font-size:16px; cursor:pointer; margin:10px 5px;}
-button:hover {background:#333;}
-label {display:block; margin-top:10px;}
-input[type=number], select {width:100%; padding:8px; margin-top:5px; border-radius:4px; border:1px solid #ccc;}
-.surface-form {border:1px solid #ddd; border-radius:6px; background:#f2f2f2; margin-bottom:15px;}
-.surface-header {padding:10px; font-weight:bold; cursor:pointer; background:#e1e1e1; border-bottom:1px solid #ddd; border-radius:6px 6px 0 0;}
-.surface-body {padding:15px; display:none;}
-.summary {background:#e7f9f2; padding:15px; border-radius:6px; margin-top:20px;}
+/* HEADER STYLING */
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+
+.logo{
+max-height:90px;
+width:auto;
+}
+
+/* BUTTON STYLING */
+button {
+padding:12px 24px;
+font-size:16px;
+font-weight:bold;
+border-radius:6px;
+margin:5px;
+cursor:pointer;
+}
+
+#addSurfaceBtn {
+background:#000;
+color:#fff;
+border:none;
+}
+
+#addSurfaceBtn:hover {
+background:#333;
+}
+
+#getQuoteBtn {
+background:#fff;
+color:#000;
+border:2px solid #000;
+}
+
+#getQuoteBtn:hover {
+background:#f0f0f0;
+}
+
+/* FOOTER STYLING */
+.site-footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
+
+/* FORM BOXES */
+.surfaceForm {
+border:1px solid #ccc;
+padding:15px;
+margin:10px auto;
+max-width:700px;
+border-radius:8px;
+text-align:left;
+}
 </style>
 </head>
 <body>
-<main>
-<h1>Instant Pressure Washing Quote Calculator</h1>
 
-<p>
-Use this calculator to get an instant estimate for pressure washing your property. You can add <strong>as many or as few surfaces</strong> as you like — from driveways, patios, decking to walls or fences — and customise each surface with dimensions, condition, accessibility, and optional extras.
+<!-- ✅ HEADER -->
+<header>
+<img src="/images/home-repairs-4u-doncaster.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
+<br><br>
+<a href="tel:07735873694" style="display:inline-block;padding:14px 28px;background:#000;color:#fff;font-size:19px;text-decoration:none;font-weight:bold;border-radius:6px;border:2px solid #000;">📞 Call Now: 07735 873694</a>
+</header>
+
+<!-- ✅ MAIN CONTENT -->
+<main style="max-width:1200px; margin:30px auto; padding:0 15px;">
+
+<section style="text-align:center; margin-bottom:50px;">
+<h1 style="color:#000;">Instant Pressure Washing Quote Calculator</h1>
+<p style="color:#000; max-width:700px; margin:0 auto 25px;">
+You can add as many or as few surfaces as you like to get a tailored pressure washing quote for your property.
 </p>
 
-<div id="surfaces-container"></div>
+<div id="surfacesContainer"></div>
 
-<div style="text-align:center;">
-<button onclick="addSurface()">➕ Add Surface</button>
-<button onclick="calculateQuote()">Get Quote</button>
+<div style="margin-top:20px;">
+<button id="addSurfaceBtn">Add Surface</button>
+<button id="getQuoteBtn">Get Quote</button>
 </div>
 
-<div id="quote-summary" class="summary" style="display:none;"></div>
+<div id="quoteOutput" style="margin-top:25px; max-width:700px; margin-left:auto; margin-right:auto; text-align:left;"></div>
+</section>
 
+</main>
+
+<!-- ✅ FOOTER -->
+<footer class="site-footer">
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
+</footer>
+
+<!-- ✅ QUOTE CALCULATOR SCRIPT -->
 <script>
 let surfaceCount = 0;
+const surfacePrices = {
+"Driveway": 15,
+"Patio": 12,
+"Decking": 10,
+"Wall": 8,
+"Fence": 8
+};
 
-function addSurface() {
+const surfacesContainer = document.getElementById("surfacesContainer");
+const addSurfaceBtn = document.getElementById("addSurfaceBtn");
+const getQuoteBtn = document.getElementById("getQuoteBtn");
+const quoteOutput = document.getElementById("quoteOutput");
+
+function createSurfaceForm() {
 surfaceCount++;
-const container = document.getElementById('surfaces-container');
-
-const div = document.createElement('div');
-div.className = 'surface-form';
-div.id = `surface-${surfaceCount}`;
+const div = document.createElement("div");
+div.className = "surfaceForm";
 div.innerHTML = `
-<div class="surface-header" onclick="toggleSurface('${div.id}')">Surface ${surfaceCount} (click to expand/collapse)</div>
-<div class="surface-body">
+<h3>Surface ${surfaceCount}</h3>
 <label>Surface Type:
-<select class="surface-type">
-<option value="driveway">Driveway</option>
-<option value="patio">Patio</option>
-<option value="decking">Decking</option>
-<option value="wall">Wall</option>
-<option value="fence">Fence/Gate</option>
+<select class="surfaceType">
+<option value="Driveway">Driveway</option>
+<option value="Patio">Patio</option>
+<option value="Decking">Decking</option>
+<option value="Wall">Wall</option>
+<option value="Fence">Fence</option>
 </select>
 </label>
+<br><br>
 <label>Length (m):
 <input type="number" class="length" min="0" step="0.1" required>
 </label>
+<br><br>
 <label>Width (m):
 <input type="number" class="width" min="0" step="0.1" required>
 </label>
-<label>Condition:
-<select class="condition">
-<option value="light">Light</option>
-<option value="moderate">Moderate</option>
-<option value="heavy">Heavy</option>
-</select>
+<br><br>
+<label>Notes (optional):
+<input type="text" class="notes" placeholder="Any special details">
 </label>
-<label>Accessibility:
-<select class="accessibility">
-<option value="easy">Easy</option>
-<option value="limited">Limited</option>
-</select>
-</label>
-<label>Optional Extras:
-<select class="extras">
-<option value="none">None</option>
-<option value="sealant">Protective Sealant</option>
-<option value="stain">Stain Treatment</option>
-</select>
-</label>
-<button type="button" onclick="removeSurface('${div.id}')">🗑 Remove Surface</button>
-</div>
+<br><br>
+<button type="button" class="removeSurfaceBtn" style="background:#fff;color:#000;border:2px solid #000;padding:6px 12px;border-radius:6px;cursor:pointer;">Remove Surface</button>
 `;
-container.appendChild(div);
+surfacesContainer.appendChild(div);
+
+div.querySelector(".removeSurfaceBtn").addEventListener("click", () => {
+surfacesContainer.removeChild(div);
+surfaceCount--;
+updateAddButton();
+});
+
+updateAddButton();
 }
 
-function toggleSurface(id) {
-const div = document.getElementById(id);
-const body = div.querySelector('.surface-body');
-body.style.display = body.style.display === 'block' ? 'none' : 'block';
+function updateAddButton() {
+if(surfaceCount === 0) {
+addSurfaceBtn.textContent = "Add Surface";
+} else {
+addSurfaceBtn.textContent = `Add ${ordinal(surfaceCount+1)} Surface`;
+}
 }
 
-function removeSurface(id) {
-const el = document.getElementById(id);
-if(el) el.remove();
+function ordinal(n) {
+const s=["th","st","nd","rd"], v=n%100;
+return n + (s[(v-20)%10]||s[v]||s[0]);
 }
 
-function calculateQuote() {
-const containers = document.querySelectorAll('.surface-form');
-if(containers.length === 0) {
-alert("Please add at least one surface to calculate a quote.");
+addSurfaceBtn.addEventListener("click", createSurfaceForm);
+
+getQuoteBtn.addEventListener("click", () => {
+const forms = document.querySelectorAll(".surfaceForm");
+if(forms.length === 0){
+alert("Please add at least one surface to get a quote.");
 return;
 }
 
-let totalCost = 0;
-let summaryHtml = '';
+let totalPrice = 0;
+let summary = "<h2 style='text-align:center;'>Your Pressure Washing Quote</h2>";
 
-containers.forEach((container, index) => {
-const type = container.querySelector('.surface-type').value;
-const length = parseFloat(container.querySelector('.length').value) || 0;
-const width = parseFloat(container.querySelector('.width').value) || 0;
-const condition = container.querySelector('.condition').value;
-const accessibility = container.querySelector('.accessibility').value;
-const extras = container.querySelector('.extras').value;
+forms.forEach((form, index) => {
+const type = form.querySelector(".surfaceType").value;
+const length = parseFloat(form.querySelector(".length").value) || 0;
+const width = parseFloat(form.querySelector(".width").value) || 0;
+const notes = form.querySelector(".notes").value;
 
-let baseRate = 0;
-if(type==="driveway") baseRate=3;
-else if(type==="patio") baseRate=2.5;
-else if(type==="decking") baseRate=4;
-else if(type==="wall") baseRate=2.5;
-else if(type==="fence") baseRate=20;
+const area = length * width;
+const price = area * surfacePrices[type];
+totalPrice += price;
 
-let area = length * width;
-if(type==="fence") area = length;
-
-let conditionMultiplier = 1;
-if(condition==="moderate") conditionMultiplier = 1.25;
-else if(condition==="heavy") conditionMultiplier = 1.5;
-
-let accessExtra = 0;
-if(accessibility==="limited") accessExtra = 40;
-
-let extrasCost = 0;
-if(extras==="sealant") extrasCost = area * 1.5;
-else if(extras==="stain") extrasCost = area * 2;
-
-const cost = area * baseRate * conditionMultiplier + accessExtra + extrasCost;
-totalCost += cost;
-
-summaryHtml += `<p><strong>Surface ${index+1}:</strong> ${type} (${length}m × ${width}m), ${condition} condition, ${accessibility} accessibility, extras: ${extras} → £${cost.toFixed(2)}</p>`;
+summary += `
+<p><strong>Surface ${index+1}:</strong> ${type} - ${length}m × ${width}m = ${area.toFixed(1)}m²<br>
+${notes ? "Notes: " + notes + "<br>" : ""}Estimated Price: £${price.toFixed(2)}</p>
+`;
 });
 
-summaryHtml += `<p><strong>Total Estimated Cost: £${totalCost.toFixed(2)}</strong></p>`;
-summaryHtml += `<p>Your selected surfaces will be cleaner, safer, and look like new!</p>`;
+summary += `<h3>Total Estimated Price: £${totalPrice.toFixed(2)}</h3>`;
+summary += `<p style="font-style:italic;">Thank you! Your quote includes all surfaces you've added. You can adjust measurements or add more surfaces if needed.</p>`;
 
-const summaryDiv = document.getElementById("quote-summary");
-summaryDiv.innerHTML = summaryHtml;
-summaryDiv.style.display = "block";
-}
+quoteOutput.innerHTML = summary;
+});
 </script>
-</main>
+
 </body>
 </html>
